# H3.NET

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  H3.NET.Native.slnx  H3.NET.slnx  LICENSE  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  docfx.json  filterConfig.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
docs/: index.md
docs/articles/: benchmarks.md  getting-started.md  toc.yml
eng/: H3NET.Native.targets
samples/H3.NET.Native.QuickStart/: H3.NET.Native.QuickStart.csproj  Program.cs  README.md  nuget.config
samples/H3NET.Native.QuickStart/: H3NET.Native.QuickStart.csproj  Program.cs  README.md
src/H3.NET.Native/: ContainmentMode.cs  CoordIJ.cs  GeoPolygon.cs  H3.NET.Native.csproj  H3DirectedEdge.cs  H3DomainException.cs  H3ErrorMarshaller.cs  H3Exception.cs  H3Index.cs  H3InvalidCellException.cs  H3MemoryException.cs  H3PentagonException.cs  H3Polygon.cs  H3Vertex.cs  LatLng.cs  PublicAPI.Shipped.txt  packages.lock.json
src/H3.NET.Native/Interop/: CellBoundary.cs  CellBoundaryVerts.cs  H3ErrorCode.cs  LinkedGeoPolygonHandle.cs  NativeCoordIJ.cs  NativeGeoLoop.cs  NativeGeoPolygon.cs  NativeLatLng.cs  NativeLayout.cs  NativeLinkedGeoLoop.cs  NativeLinkedGeoPolygon.cs  NativeLinkedLatLng.cs  NativeMethods.cs
src/H3NET.Native/: GeoPolygon.cs  H3DomainException.cs  H3ErrorMarshaller.cs  H3Exception.cs  H3Index.cs  H3InvalidCellException.cs  H3MemoryException.cs  H3NET.Native.csproj  H3PentagonException.cs  H3Polygon.cs  LatLng.cs  packages.lock.json
src/H3NET.Native/Interop/: CellBoundary.cs  CellBoundaryVerts.cs  H3ErrorCode.cs  LinkedGeoPolygonHandle.cs  NativeCoordIJ.cs  NativeGeoLoop.cs  NativeGeoPolygon.cs  NativeLatLng.cs  NativeLayout.cs  NativeLinkedGeoLoop.cs  NativeLinkedGeoPolygon.cs  NativeLinkedLatLng.cs  NativeMethods.cs
tests/: .editorconfig
tests/H3.NET.Native.Benchmarks/: H3.NET.Native.Benchmarks.csproj  H3Benchmarks.cs  H3PolygonSweepBenchmarks.cs  PocketkenPlaceholder.cs  Program.cs  RawH3Native.cs  packages.lock.json
tests/H3.NET.Native.MemoryTests/: H3.NET.Native.MemoryTests.csproj  README.md  SoakTests.cs  packages.lock.json
tests/H3.NET.Native.MemoryTests/native-harness/: CMakeLists.txt  (+2 more)
tests/H3.NET.Native.Tests/: H3.NET.Native.Tests.csproj  packages.lock.json
tests/H3NET.Native.Benchmarks/: H3Benchmarks.cs  H3NET.Native.Benchmarks.csproj  PocketkenPlaceholder.cs  Program.cs  packages.lock.json
tests/H3NET.Native.MemoryTests/: H3NET.Native.MemoryTests.csproj  README.md  SoakTests.cs  packages.lock.json
tests/H3NET.Native.MemoryTests/native-harness/: CMakeLists.txt  README.md  leakcheck.c
tests/H3NET.Native.Tests/: H3NET.Native.Tests.csproj  packages.lock.json
tools/gen-benchmark-charts/: benchmark-data.json  generate_charts.py
tools/gen-fixtures/: README.md  gen_directed_edge_fixtures.py  gen_fixtures.py  gen_grid_traversal_fixtures.py  gen_hierarchy_fixtures.py  gen_inspection_fixtures.py  gen_measures_fixtures.py  gen_polygon_experimental_fixtures.py  gen_vertex_fixtures.py  requirements.txt
(+90 files in other folders)
